# memory_cache_manager

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  tauri.conf.json
src/: lib.rs  main.rs
ui/: index.html
