[package]
name = "memory-cache-manager"
version = "1.0.0"
edition = "2021"
authors = ["Memory Cache Manager Team"]
description = "Advanced Memory Cache Cleaner for Windows"

[lib]
name = "memory_cache_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memory-cache-manager"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "psapi", "processthreadsapi", "handleapi"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"